--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,19 +3,25 @@ body {
   margin: auto;
 }
 
-header {
+/*header {
   font-family: 'Oswald', sans-serif;
   font-size: 20px;
   float: left;
-}
+}*/
 
 h1 {
   font-family: 'Oswald', sans-serif;
   font-size: 170px;
 }
 
+h2 {
+font-family: 'Oswald', sans-serif;
+font-size: 70px;
+}
+
 h3 {
   font-family: 'Oswald', sans-serif;
+  font-size: 40px;
 }
 
 p {
