Adds individual profile pages with photo, sets redis keys

--- a/views/questionnaire.erb
+++ b/views/questionnaire.erb
@@ -3,16 +3,19 @@
   <form method="POST" action="/profile/new">
     <p>
     <label for="name">name: </label>
-    <input type="text" name="sender_name" id="name" />
+    <input type="text" name="user_name" id="name" />
     <br/><br/>
     <label for="email">email: </label>
-    <input type="text" name="sender_email" id="email" />
+    <input type="text" name="user_email" id="email" />
     <br/><br/>
     <label for="user_city">city? </label>
     <input type="text" name="user_city" id="user_city" />
     <br/><br/>
     <label for="location_city">state?(two letter abbreviation)</label>
     <input type="text" name="user_state" id="user_state" />
+    <br/><br/>
+    <label for="user_img">photo.(link)</label>
+    <input type="text" name="user_img" id="user_img" />
     <br/><br/>
     <label>do you <span title="drink alcohol?">imbibe?</span></label>
       &nbsp; &nbsp; <label for="liquor_yes">obvi.</label>
