--- a/views/questionnaire.erb
+++ b/views/questionnaire.erb
@@ -28,10 +28,12 @@
     <br/><br/>
     <label for="movies">Fandango.<input type="checkbox" name="fandango" id="fandango" /></label>
     <label for="restaurants">Yelp.<input type="checkbox" name="yelp" id="yelp" /></label>
-    <label for="nyt">New York Times Events.<input type="checkbox" name="nyt" id="nyt" /></label>
+    <label for="nyte">New York Times Events.<input type="checkbox" name="nyte" id="nyte" /></label>
+    <label for="nytmr">New York Times Movie Reviews.<input type="checkbox" name="nytmr" id="nytmr">
     <label for="twitter">Twitter.<input type="checkbox" name="twitter" id="twitter" /></label>
     <label for="instagram">Instagram.<input type="checkbox" name="instagram" id="instagram" /></label>
     <label for="weather">Weather.<input type="checkbox" name="weather" id="weather" /></label>
+
     <br/><br/>
     <input type="submit" value="submit." />
     <p>
