--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -19,33 +19,32 @@
 </div>
 
 <div id="two">
-<% @hourly_temperature["hourly_forecast"].first(6).each do |hour| %>
-  <p>
-  When it's <%= time = hour["FCTTIME"]["civil"] %> it will be <%= temp = hour["temp"]["english"] %> degrees farenheit.
-  </p>
-<% end %>
+  <% @hourly_temperature["hourly_forecast"].first(6).each do |hour| %>
+    <p>
+      When it's <%= time = hour["FCTTIME"]["civil"] %> it will be <%= temp = hour["temp"]["english"] %> degrees farenheit.
+    </p>
+  <% end %>
 </div>
 
 <div id="three">
   <ul>
-  <% @parsed_ny_yelp["businesses"].shuffle.first(5).each do |spot| %>
-  <li>
-    <p><%= spot["name"] %></p>
-    <img src ="<%= spot["rating_img_url"] %>">
-    <br/>
-    <img src ="<%= spot["image_url"] %>">
-    <p><%= spot["snippet_text"] %></p>
-    <p><%= spot["display_phone"] %></p>
-  <% spot["categories"].each do |category| %>
-    <p><%= category[0] %></p>
-
+    <% @parsed_ny_yelp["businesses"].shuffle.first(5).each do |spot| %>
+      <li>
+        <p><%= spot["name"] %></p>
+        <img src ="<%= spot["rating_img_url"] %>">
+        <br/>
+        <img src ="<%= spot["image_url"] %>">
+        <p><%= spot["snippet_text"] %></p>
+        <p><%= spot["display_phone"] %></p>
+          <% spot["categories"].each do |category| %>
+            <p><%= category[0] %></p>
   </li>
   </ul>
-<% end %>
-<% end %>
+        <% end %>
+          <% end %>
 </div>
 
-<div>
+<div id="four">
   <ul>
   <% @simplified_reviews.shuffle.first(5).each do |movie| %>
   <li>
@@ -66,7 +65,8 @@
 </div>
 
 <footer>
-<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://night.ly" data-text="Night.ly just planned an amazing night for me! Check it out!" data-size="large" data-hashtags="nightly">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
+  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://night.ly" data-text="Night.ly just planned an amazing night for me! Check it out!" data-size="large" data-hashtags="nightly">Tweet</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+    </script>
+</footer>
 
