Fixes access token issue

--- a/views/user_profile.erb
+++ b/views/user_profile.erb
@@ -27,4 +27,4 @@
   </li>
 </ul>
 
-<button><a href="/questionnaire"> edit profile.</a></button>
+<button><a href="/profile/edit"> edit profile.</a></button>
