--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -28,6 +28,7 @@
 <div id="two">
   <% @hourly_temperature["hourly_forecast"].first(6).each do |hour| %>
     <p>
+      <img src="<%= hour["icon_url"] %>">
       When it's <%= time = hour["FCTTIME"]["civil"] %> it will be <%= temp = hour["temp"]["english"] %> degrees farenheit.
     </p>
   <% end %>
@@ -68,6 +69,24 @@
   </p>
 </li>
 <% end %>
+</ul>
+</div>
+
+<div id="five">
+  <ul>
+<% @tweets.each do |tweet| %>
+<li>
+<p><%= tweet[:content] %></p>
+</li>
+<% end %>
+</ul>
+</div>
+
+<div id="six">
+<ul>
+  <li>
+<%= @ig_flicks %>
+  </li>
 </ul>
 </div>
 
