--- a/views/user_profile.erb
+++ b/views/user_profile.erb
@@ -18,6 +18,8 @@
                 <br/>
                 NYTE?           <%= @profiles[@index][:NYTE] %>
                 <br/>
+                NYTMR?           <%= @profiles[@index][:NYTMR] %>
+                <br/>
                 twitter?        <%= @profiles[@index][:twitter] %>
                 <br/>
                 instagram?      <%= @profiles[@index][:instagram] %>
