--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@ header {
   background: transparent;
   width: 100%;
   margin-top: -75px;
-  margin-bottom: -60px;
+  margin-bottom: -70px;
   text-align: left;
 
 }
@@ -38,6 +38,7 @@ article{
 font-family: 'Pacifico', cursive;
 text-align: left;
 color: white;
+font-size: 20px;
 }
 
 button {
@@ -48,7 +49,7 @@ button {
 
 a:link{
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 a:visited{
@@ -56,7 +57,6 @@ a:visited{
 }
 
 div {
-
   border-radius: 20px;
   background-color: #000000;
 }
