--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -4,10 +4,10 @@
   <thead>
     <th>
       <% if session["access_token"] %>
-        <a href="/logout"><p>logout.</p></a>
+      <a href="/profile/1"><p>profile.&nbsp;//</p></a>
       </th>
       <th>
-        <a href="/profile/1"><p>profile.</p></a>
+      <a href="/logout"><p>logout.</p></a>
       </th>
     <% end %>
   </thead>
@@ -21,11 +21,11 @@
 <body>
 <% if @user_one["NYTE"] %>
 <div id="one">
-  <article>New York Times: Events.</article>
+  &nbsp;<article>New York Times: Events.</article>
   <ul>
     <% @simplified_events.shuffle.first(5).each do |event| %>
     <li>
-      <p><%= event["event_name"] %></p>
+      <a href="<%= event["event_detail_url"] %>"><p><%= event["event_name"] %></p></a>
       <p><%= event["web_description"] %></p>
       <p><%= event["venue_name"] %></p>
       <p><%= event["neighborhood"] %></p>
@@ -44,7 +44,7 @@
   <% @hourly_temperature["hourly_forecast"].first(5).each do |hour| %>
     <p>
       <img src="<%= hour["icon_url"] %>">
-      When it's <%= time = hour["FCTTIME"]["civil"] %> it will be <%= temp = hour["temp"]["english"] %> degrees farenheit.
+      When it's <%= time = hour["FCTTIME"]["civil"] %> it will be <%= temp = hour["temp"]["english"] %> &#176; farenheit.
     </p>
   <% end %>
 </div>
@@ -57,7 +57,7 @@
   <ul>
     <% @parsed_ny_yelp["businesses"].shuffle.first(5).each do |spot| %>
       <li>
-        <p><%= spot["name"] %></p>
+        <a href="<%= spot["mobile_url"] %>"><p><%= spot["name"] %></p></a>
         <img src ="<%= spot["rating_img_url"] %>">
         <br/>
         <img src ="<%= spot["image_url"] %>">
@@ -79,16 +79,14 @@
   <ul>
   <% @simplified_reviews.shuffle.first(5).each do |movie| %>
   <li>
-    <p>
-  <%= movie["display_title"] %>
+  <p>
+  <a href="<%= movie["link"]["url"] %>"><%= movie["display_title"] %></a>
   <br/>
   <%= movie["headline"] %>
   <br/>
-  <img src ="<%= movie["multimedia"]["resource"]["src"] %>">
+  <img src="<%= movie["multimedia"]["resource"]["src"] %>">
   <br/>
   <%= movie["summary_short"] %>
-  <br/>
-  <%= movie["link"]["url"] %>
   </p>
 </li>
 <% end %>
@@ -102,7 +100,7 @@
   <ul>
 <% @tweets.each do |tweet| %>
 <li>
-<p><%= tweet[:content] %></p>
+<p><a href="<%= tweet[:url] %> "> <%= tweet[:content] %> </a></p>
 </li>
 <% end %>
 </ul>
