--- a/views/questionnaire.erb
+++ b/views/questionnaire.erb
@@ -2,8 +2,8 @@
   <body>
   <form method="POST" action="/profile/new">
     <p>
-      <label for="name">name: </label>
-      <input type="text" name="user_name" id="name" />
+      <label for="nickname">nickname: </label>
+      <input type="text" name="nickname" id="nickname" />
     <br/><br/>
       <label for="email">email: </label>
       <input type="text" name="user_email" id="email" />
