--- a/views/user_profile.erb
+++ b/views/user_profile.erb
@@ -5,29 +5,28 @@
 <div id="profile">
 <ul>
   <li>
-    <p>
-                user email:     <%= @user["email"] %>
+
+                <p>email:</p>           <p class="bigger"><%= @user["email"] %></p>
                 <br/>
-                user city:      <%= @user["user_city"] %>
+                <p>city:</p>            <p class="bigger"><%= @user["user_city"] %></p>
                 <br/>
-                user state:     <%= @user["user_state"] %>
+                <p>state:</p>           <p class="bigger"><%= @user["user_state"] %></p>
                 <br/>
-                user drinks?    <%= @user["user_drinks"] %>
+                <p>user drinks?</p>     <p class="bigger"><%= @user["user_drinks"] %></p>
                 <br/>
-                fandango?       <%= @user["fandango"] %>
+                <p>fandango?</p>        <p class="bigger"><%= @user["fandango"] %></p>
                 <br/>
-                yelp?           <%= @user["yelp"] %>
+                <p>yelp?</p>            <p class="bigger"><%= @user["yelp"] %></p>
                 <br/>
-                NYTE?           <%= @user["NYTE"] %>
+                <p>NYTE?</p>            <p class="bigger"><%= @user["NYTE"] %></p>
                 <br/>
-                NYTMR?           <%= @user["NYTMR"] %>
+                <p>NYTMR?</p>           <p class="bigger"><%= @user["NYTMR"] %></p>
                 <br/>
-                twitter?        <%= @user["twitter"] %>
+                <p>twitter?</p>         <p class="bigger"><%= @user["twitter"] %></p>
                 <br/>
-                instagram?      <%= @user["instagram"] %>
+                <p>instagram?</p>       <p class="bigger"><%= @user["instagram"] %></p>
                 <br/>
-                weather?         <%= @user["weather"] %>
-    </p>
+                <p>weather?</p>         <p class="bigger"><%= @user["weather"] %></p>
   </li>
 </ul>
 </div>
