Adds github avatar as profile avatar

--- a/views/user_profile.erb
+++ b/views/user_profile.erb
@@ -1,7 +1,7 @@
 <h2><%= session["username"] %> </h2>
 <p> aka </p>
 <h3> <%= @user["nickname"] %> </h3>
-<img src="<%= @user["user_img"] %>">
+<img src="<%= @user_info_response["avatar_url"] %>">
 <div id="profile">
 <ul>
   <li>
