--- a/views/questionnaire.erb
+++ b/views/questionnaire.erb
@@ -11,8 +11,11 @@
       <label for="user_city">city? </label>
       <input type="text" name="user_city" id="user_city" />
     <br/><br/>
-      <label for="location_city">state?(two letter abbreviation)</label>
+      <label for="user_state">state?(two letter abbreviation)</label>
       <input type="text" name="user_state" id="user_state" />
+    <br/><br/>
+        <label for="user_zip">zip code.</label>
+      <input type="text" name="user_zip" id="user_zip" />
     <br/><br/>
       <label>do you <span title="drink alcohol?">imbibe?</span></label>
         &nbsp; &nbsp; <label for="liquor_yes">obvi.</label>
@@ -23,7 +26,7 @@
     <br/><br/>
       <label for="feed_choice">select your feeds!</label>
     <br/><br/>
-      <label for="movies">Fandango.<input type="checkbox" name="fandango" id="fandango" /></label>
+      <label for="movies">Meetup.<input type="checkbox" name="meetup" id="meetup" /></label>
       <label for="restaurants">Yelp.<input type="checkbox" name="yelp" id="yelp" /></label>
       <label for="nyte">New York Times Events.<input type="checkbox" name="nyte" id="nyte" /></label>
       <label for="nytmr">New York Times Movie Reviews.<input type="checkbox" name="nytmr" id="nytmr">
