--- a/views/user_profile.erb
+++ b/views/user_profile.erb
@@ -9,6 +9,7 @@
                 <p>email:</p>           <p class="bigger"><%= @user["email"] %></p>
                 <p>city:</p>            <p class="bigger"><%= @user["user_city"] %></p>
                 <p>state:</p>           <p class="bigger"><%= @user["user_state"] %></p>
+                <p>zip code:</p>        <p class="bigger"><%= @user["user_zip"] %></p>
                 <p>user drinks?</p>     <p class="bigger"><%= @user["user_drinks"] %></p>
                 <p>fandango?</p>        <p class="bigger"><%= @user["fandango"] %></p>
                 <p>yelp?</p>            <p class="bigger"><%= @user["yelp"] %></p>
