--- a/views/user_profile.erb
+++ b/views/user_profile.erb
@@ -11,7 +11,7 @@
                 <p>state:</p>           <p class="bigger"><%= @user["user_state"] %></p>
                 <p>zip code:</p>        <p class="bigger"><%= @user["user_zip"] %></p>
                 <p>user drinks?</p>     <p class="bigger"><%= @user["user_drinks"] %></p>
-                <p>fandango?</p>        <p class="bigger"><%= @user["fandango"] %></p>
+                <p>meetup?</p>          <p class="bigger"><%= @user["meetup"] %></p>
                 <p>yelp?</p>            <p class="bigger"><%= @user["yelp"] %></p>
                 <p>NYTE?</p>            <p class="bigger"><%= @user["NYTE"] %></p>
                 <p>NYTMR?</p>           <p class="bigger"><%= @user["NYTMR"] %></p>
